<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/registerLayout">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/indigo_daisy"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/tag"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_fname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/first_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_lname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/last_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_type_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <CheckBox android:id="@+id/checkbox_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Creator"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/register"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_below="@id/register_button"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/back"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>